[package]
name = "orbitals-bitcoin-sale-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
mainnet = []
testnet = []
luckycoin = []
dogecoin = []
bellscoin = []

[dependencies]
alkanes-runtime.workspace = true
alkanes-support.workspace = true
metashrew-support.workspace = true
protorune-support.workspace = true
ordinals.workspace = true
anyhow.workspace = true
bitcoin.workspace = true