[package]
name = "orbitals-support"
version = "0.1.0"
edition = "2021"
description = "Support library for orbital alkanes"
authors = ["flex"]

[dependencies]
alkanes-support = { git = "https:/github.com/kungfuflex/alkanes-rs" }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = "1.0.94"